feat(ui): refresh the application interface
- introduce shared design tokens for JavaFX controls and canvas rendering
- redesign headers, toolbars, tabs, dialogs, and status components
- update texture cards with pill actions and selection indicators
- add a contextual toolbar for multi-selection actions
- preserve Java 8 compatibility for immutable texture file lists